--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.14",
     "@types/express-status-monitor": "^1.3.0",
     "@types/node": "^18.11.9",
+    "@types/request": "^2.48.8",
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -26,6 +27,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-status-monitor": "^1.3.4"
+    "express-status-monitor": "^1.3.4",
+    "http-proxy-middleware": "^2.0.6",
+    "http-status-codes": "^2.2.0",
+    "request": "^2.88.2"
   }
 }
