--- a/.env
+++ b/.env
@@ -1,57 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+MAX_UPLOAD_LIMIT=2000
+PORT=4040
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="mysql://root:password@localhost:3306/restaurant"
-
-APP_SECRET="restaurant"
-
-# App's running environment
-# NODE_ENV="production"
-
-# App's running port
-# PORT="4040"
-
-# Keep logs (in days)
-# default: 10
-# Note: Keeps log-files of no. of days defined
-LOG_DAYS=10
-
-# Max request body size
-APP_MAX_UPLOAD_LIMIT="50mb"
-
-# Max Parameter Limit that are allowed in 
-# URL-encoded data
-APP_MAX_PARAMETER_LIMIT="5000"
-
-# Is CORS Enabled
-# default: true (Accepts only boolean)
-CORS_ENABLED=true
-
-# API Prefix
-API_PREFIX="api"
-
-# JSON Web Tokem Expiry time
-# Note: In minutes
-JWT_EXPIRES_IN=3
-
-# Enable Queue Monitor Server
-QUEUE_HTTP_ENABLED=true
-
-# App's global details
-APP_NAME="Restaurant reservation and management"
-APP_DESCRIPTION="A Web Server built with Express, Typescript, Mongoose, and EJS."
-# APP_URL="http://localhost:4040"
-APP_KEYWORDS="web-server, typescript-express, typescript, express"
-COMPANY_NAME="TTHH Company"
-
-AUTOMATE_DURATION=5000
-AUTOMATE_DURATION_IN_SECONDS=120
-UNLOCK_PERCENT=0.2
-# BEFORE_ASSIGN_RESERVATION
-TIME_PADDING = 5000
-
-# ONLY FOR DEVELOPMENT
-NUM_TEST = 20
+NOTION_TOKEN='secret_MJtRBG708QjgBixhq2v1pXRstA7Co3oXr4rLTNQSLf4'
+NOTION_OAUTH_ID='0aca9732-3a2d-4fff-8926-2dfd89657c86'
+NOTION_OAUTH_SECRET='secret_cHvS1kMwFbg5HpFO9YY7xvxRQZr2Cb3kqAirgmz8qX2'
