--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MAX_UPLOAD_LIMIT=2000
 PORT=4040
+MONGOOSE_URI='mongodb://localhost:27017/sipoenglish'
 
 NOTION_TOKEN='secret_MJtRBG708QjgBixhq2v1pXRstA7Co3oXr4rLTNQSLf4'
 NOTION_OAUTH_ID='0aca9732-3a2d-4fff-8926-2dfd89657c86'
