--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
+    "@types/mongoose": "^5.11.97",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -30,6 +32,7 @@
     "express-status-monitor": "^1.3.4",
     "http-proxy-middleware": "^2.0.6",
     "http-status-codes": "^2.2.0",
+    "mongoose": "^7.0.1",
     "request": "^2.88.2"
   }
 }
