--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.3",
     "@types/mongoose": "^5.11.97",
+    "@types/uuid": "^9.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -33,6 +34,7 @@
     "http-proxy-middleware": "^2.0.6",
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^9.0.0"
   }
 }
