Complete post code to get access toke api + init samle data

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+NODE_ENV='development'
+DEFAULT_USER_FOR_DEVELOPMENT=''
+
 MAX_UPLOAD_LIMIT=2000
 PORT=4040
 MONGOOSE_URI='mongodb://127.0.0.1:27017/sipoenglish'
