--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 # Keep environment variables out of version control.env
 src/prisma/migrations/
 build/
+dist/
 temp.ts
 .history/
 src/test.ts
