--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@notionhq/client": "^2.2.3",
+        "@types/franc": "^5.0.1",
         "@types/mongoose": "^5.11.97",
         "@types/uuid": "^9.0.1",
         "cookie-parser": "^1.4.6",
@@ -32,6 +33,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-status-monitor": "^1.3.4",
+        "franc": "^6.1.0",
         "http-proxy-middleware": "^2.0.6",
         "http-status-codes": "^2.2.0",
         "mongoose": "^7.0.1",
