--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
     "next": "latest",
     "react": "18.2.0",
