--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "@types/firebase": "^3.2.1",
     "axios": "^1.3.4",
+    "firebase": "^9.17.2",
     "framer-motion": "^10.0.1",
     "next": "latest",
     "react": "18.2.0",
