--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-status-monitor": "^1.3.4",
+        "firebase-admin": "^11.5.0",
         "franc": "^6.1.0",
         "http-proxy-middleware": "^2.0.6",
         "http-status-codes": "^2.2.0",
