--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ MONGOOSE_URI='mongodb://127.0.0.1:27017/sipoenglish'
 NOTION_TOKEN='secret_MJtRBG708QjgBixhq2v1pXRstA7Co3oXr4rLTNQSLf4'
 NOTION_OAUTH_ID='0aca9732-3a2d-4fff-8926-2dfd89657c86'
 NOTION_OAUTH_SECRET='secret_cHvS1kMwFbg5HpFO9YY7xvxRQZr2Cb3kqAirgmz8qX2'
+
+FIREBASE_REFRESH_TOKEN=""
+FIREBASE_DB_URL=""
+
+USE_DEFAULT_USER="false"
