Change config for default user

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NODE_ENV='development'
-DEFAULT_USER_FOR_DEVELOPMENT=''
+USE_DEFAULT_USER="false"
+DEFAULT_USER_EMAIL=""
+DEFAULT_USER_FIREBASE_UID=""
 
 MAX_UPLOAD_LIMIT=2000
 PORT=4040
@@ -12,4 +14,3 @@ NOTION_OAUTH_SECRET='secret_cHvS1kMwFbg5HpFO9YY7xvxRQZr2Cb3kqAirgmz8qX2'
 FIREBASE_REFRESH_TOKEN=""
 FIREBASE_DB_URL=""
 
-USE_DEFAULT_USER="false"
