--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NODE_ENV='development'
-USE_DEFAULT_USER="false"
-DEFAULT_USER_EMAIL=""
-DEFAULT_USER_FIREBASE_UID=""
+USE_DEFAULT_USER="true"
+DEFAULT_USER_EMAIL="tan.letan8266@hcmut.edu.vn"
+DEFAULT_USER_FIREBASE_UID="Gkl7TRULcyX6brypIvdOUn1Lslj2"
 
 MAX_UPLOAD_LIMIT=2000
 PORT=4040
@@ -11,6 +11,4 @@ NOTION_TOKEN='secret_MJtRBG708QjgBixhq2v1pXRstA7Co3oXr4rLTNQSLf4'
 NOTION_OAUTH_ID='0aca9732-3a2d-4fff-8926-2dfd89657c86'
 NOTION_OAUTH_SECRET='secret_cHvS1kMwFbg5HpFO9YY7xvxRQZr2Cb3kqAirgmz8qX2'
 
-FIREBASE_REFRESH_TOKEN=""
-FIREBASE_DB_URL=""
-
+FIREBASE_ADMIN_PATH='file://E:/english-app/api/private/sipo-english-8266-firebase-adminsdk.json'
