Post code and firebase auth work fine with use_default_user set to false

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV='development'
-USE_DEFAULT_USER="true"
+USE_DEFAULT_USER="false"
 DEFAULT_USER_EMAIL="tan.letan8266@hcmut.edu.vn"
 DEFAULT_USER_FIREBASE_UID="Gkl7TRULcyX6brypIvdOUn1Lslj2"
 
