--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build": "npx tsc",
         "start": "node build/index.js",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon --inspect -q build/index.js\""
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon --inspect -q build/index.js\"",
+        "docker-dev": "docker compose -f docker-compose.dev.yml up"
     },
     "author": "Tan Le",
     "license": "ISC",
@@ -21,7 +22,7 @@
         "concurrently": "^7.5.0",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.3"
+        "typescript": "^4.9.5"
     },
     "dependencies": {
         "@notionhq/client": "^2.2.3",
