--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
+    "@types/faker": "^6.6.9",
     "@types/firebase": "^3.2.1",
+    "@types/react-lottie": "^1.2.6",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
+    "faker": "^6.6.6",
     "firebase": "^9.17.2",
     "framer-motion": "^10.0.1",
     "next": "latest",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-textarea-autosize": "^8.4.0",
     "react-toastify": "^9.1.1"
   },
