Fix import statements in main service

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "services/*"
     ],
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint"
     },
     "keywords": [],
     "author": "Tan Le",
