--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,6 +1,3 @@
 {
-    "name": "@yourenglish/backend",
-    "dependencies": {
-        "@yourenglish/configs": "*"
-    }
+    "name": "@yourenglish/backend"
 }
