--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -40,7 +40,6 @@
         "http-status-codes": "^2.2.0",
         "mongoose": "^7.0.1",
         "request": "^2.88.2",
-        "uuid": "^9.0.0",
-        "@yourenglish/backend": "*"
+        "uuid": "^9.0.0"
     }
 }
