--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "yourenglish",
+    "name": "sipo",
     "version": "0.0.1",
     "private": true,
     "description": "Hello world from Tan Le",
