--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "helloworld",
+    "name": "@sipo/main-service",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.ts",
