--- a/services/main-service/tsconfig.json
+++ b/services/main-service/tsconfig.json
@@ -25,9 +25,9 @@
         // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
         /* Modules */
-        "module": "ESNext" /* Specify what module code is generated. */,
+        "module": "CommonJS" /* Specify what module code is generated. */,
         // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-        "moduleResolution": "nodenext" /* Specify how TypeScript looks up a file from a given module specifier. */,
+        // "moduleResolution": "classic" /* Specify how TypeScript looks up a file from a given module specifier. */,
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
         // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -76,7 +76,7 @@
         "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 
         /* Type Checking */
-        "strict": true /* Enable all strict type-checking options. */,
+        "strict": true /* Enable all strict type-checking options. */
         // "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
         // "strictNullChecks": true,                         /* When type checking, take into account 'null' and 'undefined'. */
         // "strictFunctionTypes": true,                      /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
@@ -98,7 +98,7 @@
 
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-        "skipLibCheck": true /* Skip type checking all .d.ts files. */
+        // "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
     "ts-node": {
         "esm": true,
