--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,6 +1,14 @@
 {
     "name": "@sipo/backend",
     "version": "0.0.1",
-    "main": "src/index.ts",
-    "types": "src/index.ts"
+    "main": "index.ts",
+    "types": "index.ts",
+    "peerDependencies": {
+        "@types/express": "^4.17.14",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "express-status-monitor": "^1.3.4"
+    }
 }
