--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sipo/web",
+    "name": "@yours/web",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -7,10 +7,10 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.0.16",
-        "@sipo/configs": "*",
-        "@sipo/utils": "*",
         "@types/firebase": "^3.2.1",
         "@types/react-lottie": "^1.2.6",
+        "@yours/configs": "*",
+        "@yours/utils": "*",
         "axios": "^1.3.4",
         "chart.js": "^4.2.1",
         "firebase": "^9.17.2",
