--- a/packages/backend/models/package.json
+++ b/packages/backend/models/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sipo/models",
+    "name": "@yours/models",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.ts"
