--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sipo/configs",
+    "name": "@yours/configs",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.ts",
