--- a/packages/interfaces/package.json
+++ b/packages/interfaces/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sipo/interfaces",
+    "name": "@yours/interfaces",
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.ts"
