--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sipo/main-service",
+    "name": "@yours/main-service",
     "version": "1.0.0",
     "description": "",
     "main": "src/index.ts",
@@ -26,11 +26,11 @@
     },
     "dependencies": {
         "@notionhq/client": "^2.2.3",
-        "@sipo/backend": "*",
-        "@sipo/utils": "*",
         "@types/franc": "^5.0.1",
         "@types/mongoose": "^5.11.97",
         "@types/uuid": "^9.0.1",
+        "@yours/backend": "*",
+        "@yours/utils": "*",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
