--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -8,7 +8,8 @@
         "build": "npx tsc",
         "start": "node build/index.js",
         "dev": "nodemon --watch src --watch ../../packages/backend --watch ../../packages/intefaces --watch ../../packages/utils src/index.ts",
-        "docker-dev": "docker compose -f docker-compose.dev.yml up"
+        "docker-dev": "docker compose -f docker-compose.dev.yml up",
+        "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
     },
     "author": "Tan Le",
     "license": "ISC",
