--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "main": "index.ts",
     "types": "index.ts",
+    "scripts": {
+        "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
+    },
     "peerDependencies": {
         "@types/express": "^4.17.14",
         "cookie-parser": "^1.4.6",
