--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.1",
     "main": "index.js",
     "license": "MIT",
+    "scripts": {
+        "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
+    },
     "dependencies": {
         "@next/eslint-plugin-next": "^13.2.4",
         "@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -10,6 +13,7 @@
         "eslint": "8.38.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-next": "^0.0.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
