--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,5 +2,8 @@
     "name": "@yours/utils",
     "version": "0.0.1",
     "main": "index.ts",
-    "types": "index.ts"
+    "types": "index.ts",
+    "scripts": {
+        "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
+    }
 }
