--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.ts",
     "type": "commonjs",
     "scripts": {
-        "build": "npx tsc",
+        "build": "npx tsc --transpileOnly",
         "start": "node build/index.js",
         "dev": "nodemon --watch src --watch ../../packages/backend --watch ../../packages/intefaces --watch ../../packages/utils src/index.ts",
         "docker-dev": "docker compose -f docker-compose.dev.yml up",
@@ -13,36 +13,29 @@
     },
     "author": "Tan Le",
     "license": "ISC",
+    "dependencies": {
+        "@notionhq/client": "^2.2.3",
+        "@yours/backend": "*",
+        "@yours/utils": "*",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "firebase-admin": "^11.5.0",
+        "http-status-codes": "^2.2.0",
+        "mongoose": "^7.0.1",
+        "request": "^2.88.2"
+    },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.3",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/express-status-monitor": "^1.3.0",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^18.11.9",
         "@types/request": "^2.48.8",
         "concurrently": "^7.5.0",
         "nodemon": "^2.0.20",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.9.5"
-    },
-    "dependencies": {
-        "@notionhq/client": "^2.2.3",
-        "@types/franc": "^5.0.1",
-        "@types/mongoose": "^5.11.97",
-        "@types/uuid": "^9.0.1",
-        "@yours/backend": "*",
-        "@yours/utils": "*",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "express-status-monitor": "^1.3.4",
-        "firebase-admin": "^11.5.0",
-        "franc": "^6.1.0",
-        "http-proxy-middleware": "^2.0.6",
-        "http-status-codes": "^2.2.0",
-        "mongoose": "^7.0.1",
-        "request": "^2.88.2",
-        "uuid": "^9.0.0"
+        "typescript": "^4.9.5",
+        "ts-node": "^10.9.1"
     }
 }
