--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@yours/web",
     "scripts": {
-        "dev": "next dev",
+        "dev": "sst bind next dev",
         "build": "next build",
         "start": "next start",
         "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
@@ -31,7 +31,10 @@
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
         "autoprefixer": "^10.4.12",
+        "aws-cdk-lib": "2.79.1",
+        "constructs": "10.1.156",
         "postcss": "^8.4.18",
+        "sst": "^2.10.4",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4"
     }
