--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -35,7 +35,7 @@
         "@types/request": "^2.48.8",
         "concurrently": "^7.5.0",
         "nodemon": "^2.0.20",
-        "typescript": "^4.9.5",
-        "ts-node": "^10.9.1"
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
     }
 }
