--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,40 +1,36 @@
 {
     "name": "@yours/web",
     "scripts": {
-        "dev": "sst bind next dev",
+        "dev": "next dev",
+        "dev:sst": "sst bind next dev",
         "build": "next build",
         "start": "next start",
         "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
     },
     "dependencies": {
         "@heroicons/react": "^2.0.16",
-        "@types/firebase": "^3.2.1",
-        "@types/react-lottie": "^1.2.6",
         "@yours/configs": "*",
         "@yours/utils": "*",
         "axios": "^1.3.4",
         "chart.js": "^4.2.1",
         "firebase": "^9.17.2",
         "framer-motion": "^10.0.1",
-        "next": "latest",
-        "prop-types": "^15.8.1",
-        "react": "18.2.0",
+        "next": "^13.1.1",
         "react-chartjs-2": "^5.2.0",
-        "react-dom": "18.2.0",
+        "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
         "react-lottie": "^1.2.3",
         "react-textarea-autosize": "^8.4.0",
         "react-toastify": "^9.1.1"
     },
     "devDependencies": {
+        "@types/firebase": "^3.2.1",
         "@types/node": "18.11.3",
         "@types/react": "18.0.21",
         "@types/react-dom": "18.0.6",
+        "@types/react-lottie": "^1.2.6",
         "autoprefixer": "^10.4.12",
-        "aws-cdk-lib": "2.79.1",
-        "constructs": "10.1.156",
         "postcss": "^8.4.18",
-        "sst": "^2.10.4",
         "tailwindcss": "^3.2.4",
         "typescript": "4.9.4"
     }
