--- a/package.json
+++ b/package.json
@@ -21,7 +21,36 @@
         "node": ">=18.5.0"
     },
     "packageManager": "yarn@3.5.0",
+    "dependencies": {
+        "@heroicons/react": "^2.0.16",
+        "@yours/configs": "*",
+        "@yours/utils": "*",
+        "axios": "^1.3.4",
+        "chart.js": "^4.2.1",
+        "firebase": "^9.17.2",
+        "framer-motion": "^10.0.1",
+        "next": "^13.1.1",
+        "react": "18.2.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
+        "react-lottie": "^1.2.3",
+        "react-textarea-autosize": "^8.4.0",
+        "react-toastify": "^9.1.1"
+    },
     "devDependencies": {
-        "turbo": "latest"
+        "@types/firebase": "^3.2.1",
+        "@types/node": "18.11.3",
+        "@types/react": "18.0.21",
+        "@types/react-dom": "18.0.6",
+        "@types/react-lottie": "^1.2.6",
+        "autoprefixer": "^10.4.12",
+        "aws-cdk-lib": "2.79.1",
+        "constructs": "10.1.156",
+        "postcss": "^8.4.18",
+        "sst": "^2.10.4",
+        "tailwindcss": "^3.2.4",
+        "turbo": "latest",
+        "typescript": "4.9.4"
     }
 }
