--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "packageManager": "yarn@3.5.0",
     "dependencies": {
         "@heroicons/react": "^2.0.16",
+        "@types/lodash": "^4.14.195",
         "@yours/configs": "*",
         "@yours/utils": "*",
         "axios": "^1.3.4",
         "chart.js": "^4.2.1",
         "firebase": "^9.17.2",
         "framer-motion": "^10.0.1",
+        "lodash": "^4.17.21",
         "next": "^13.1.1",
         "react": "18.2.0",
         "react-chartjs-2": "^5.2.0",
