--- a/services/main-service/package.json
+++ b/services/main-service/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@notionhq/client": "^2.2.3",
+        "@types/morgan": "^1.9.4",
         "@yours/backend": "*",
         "@yours/utils": "*",
         "cors": "^2.8.5",
@@ -24,6 +25,7 @@
         "http-status-codes": "^2.2.0",
         "lodash": "^4.17.21",
         "mongoose": "^7.0.1",
+        "morgan": "^1.10.0",
         "request": "^2.88.2"
     },
     "devDependencies": {
@@ -31,10 +33,10 @@
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/express-status-monitor": "^1.3.0",
+        "@types/lodash": "^4.14.195",
         "@types/mongoose": "^5.11.97",
         "@types/node": "^18.11.9",
         "@types/request": "^2.48.8",
-        "@types/lodash": "^4.14.195",
         "concurrently": "^7.5.0",
         "nodemon": "^2.0.20",
         "ts-node": "^10.9.1",
