--- a/services/main-service/tsconfig.json
+++ b/services/main-service/tsconfig.json
@@ -1,4 +1,6 @@
 {
+    "include": ["./src/", "../../packages/backend", "../../packages/utils"],
+    "exclude": ["../../node_modules"],
     "compilerOptions": {
         "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
         "module": "CommonJS" /* Specify what module code is generated. */,
@@ -8,6 +10,12 @@
         "outDir": "./build" /* Specify an output folder for all emitted files. */,
         "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
         "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-        "strict": true /* Enable all strict type-checking options. */
-    }
+        "strict": true /* Enable all strict type-checking options. */,
+        "skipLibCheck": true,
+        "paths": {
+            "@yours/backend": ["../../packages/backend"],
+            "@yours/interfaces": ["../../packages/interfaces"],
+            "@yours/utils": ["../../packages/utils"]
+        }
+    },
 }
