--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "aws-cdk-lib": "2.79.1",
         "constructs": "10.1.156",
         "postcss": "^8.4.18",
+        "rimraf": "^5.0.1",
         "sst": "^2.10.4",
         "tailwindcss": "^3.2.4",
         "turbo": "latest",
