--- a/services/main-service/Dockerfile
+++ b/services/main-service/Dockerfile
@@ -1,24 +1,19 @@
 # syntax=docker/dockerfile:1
 
-FROM node:19-alpine
+FROM node:18.16.0-alpine
 
-ENV NODE_ENV=development
+ENV NODE_ENV=production
 
 WORKDIR /app
 
-COPY package*.json ./
-COPY tsconfig.json ./
+COPY package.json ./
 
-RUN npm install 
+RUN "npm install --omit=dev"
 
-RUN npm install typescript
-
-COPY . .
+COPY ./build .
 
 # check files list
 RUN ls -a
 
-RUN npm run build
-
-CMD ["npm", "start"]
+CMD ["node", "services/main-service/src/index.js"]
 
